--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,4 +3,5 @@
 {% block content %}
     <h1>Parol o'zgardi!</h1>
     <p>Yangi parol bilan saytga kirishingiz mumkin.</p>
+    <a href="{% url 'login' %}" class="btn btn-success">Saytga kirish</a>
 {% endblock content %}
