--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -4,14 +4,15 @@
     <div class="container-fuild">
         <div class="card">
             <div class="card-body">
+                <h3 class="card-title" style="color: #5a5ab9">{{object.title}}</h3>
                 {% if object.photo %}
                     <img class="card-img-top" src="{{object.photo.url}}" alt="{{object.title}}">
                 {% endif %}
-                <h1 class="card-title">{{object.title}}</h1>
-                <h5 class="card-subtitle mb-2 text-muted">Muallif: {{object.author}}, | {{object.date}}</h5>
+                <br><br>
                 <p class="card-text">{{object.body | safe}}</p>
-                <a href="{% url 'article_edit' %}">Tahrirlash</a> |
-                <a href="{% url 'article_delete' %}">O'chirish</a> |
+                <h5 class="card-subtitle mb-2 text-muted">Muallif: {{object.author}}, | {{object.date}}</h5>
+                <a href="{% url 'article_edit' article.pk %}">Tahrirlash</a> |
+                <a href="{% url 'article_delete' article.pk %}">O'chirish</a> |
                 <a href="{% url 'article_list' %}">Barcha postlar</a>
             </div>
             <div class="card">
@@ -19,7 +20,7 @@
                 {% for comment in article.comments.all %}
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>{{ comment }}</p>
+                            <h6>{{ comment }}</h6>
                             <footer class="blockquote-footer">{{ comment.author}}</footer>
                         </blockquote>
                     </div>
