--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{% block title %}Xan Blog{% endblock title %}</title>
+        <title>{% block title %}Xan News{% endblock title %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F4B41A;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fef391c9">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'assets/img/logo.jpeg' %}" width="30" class="d-inline-block align-top" alt="logo">
-                Xan Blog
+                Xan News
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent"
