--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,6 @@
 <h2>Saytga kirish</h2>
 <form method="post">{% csrf_token %}
     {{form|crispy}}
-    <button type="button" class="btn btn-success">Kirish</button>
+    <button type="submit" class="btn btn-success">Kirish</button>
 </form>
 {% endblock content %}
