--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Email manzilingizni tekshiring!</h1>
+    <h1>E-mail manzilingizni tekshiring!</h1>
     <p>Kalit so'zni tiklash uchun qo'llanma email manzilingizga yuborildi!</p>
+    <p>Yuborilgan havola orqali saytga kirib, parolingizni almashtirishingiz mumkin!</p>
 {% endblock content %}
