--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{% url 'password_change'%}">Kalit so'zni almashtirish</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'logout' %}">Chiqib ketish</a>
+                                <a class="dropdown-item" href="{% url 'registration/logout' %}">Chiqib ketish</a>
                             </div>
                         </li>
                     </ul>
