--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <h4 style="color: grey">{{user.username | title}}, xush kelibsiz!</h4>
 <br>
         <h5>
-            <a href="{% url 'logout' %}">Saytdan chiqish</a> |
+            <a href="{% url 'registration/logout' %}">Saytdan chiqish</a> |
             <a href="{% url 'article_list' %}">Postlar</a>
         </h5>
     {% else %}
